// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketingFlag should render an empty div when no promotions are active 1`] = `
<MarketingFlag
  loyaltyProgram={Object {}}
  marketingAttributes={Object {}}
  promotionCode="0"
  topLeftStyle={Object {}}
  topRightStyle={Object {}}
  wrapperStyle={Object {}}
>
  <glamorous(div)
    wrapperStyle={Object {}}
  >
    <div
      className="css-nil"
    >
      <glamorous(div)
        topLeftStyle={Object {}}
      >
        <div
          className="css-nil"
        >
          <MarketingBadge
            promotion={
              Object {
                "code": null,
              }
            }
          />
        </div>
      </glamorous(div)>
      <glamorous(div)
        topLeft={
          Object {
            "code": null,
          }
        }
        topRightStyle={Object {}}
      >
        <div
          className="css-nil"
        >
          <MarketingBadge
            promotion={
              Object {
                "code": null,
              }
            }
          />
        </div>
      </glamorous(div)>
    </div>
  </glamorous(div)>
</MarketingFlag>
`;

exports[`MarketingFlag should render properly when promotions are active 1`] = `
<MarketingFlag
  loyaltyProgram={
    Object {
      "endDate": "2020-10-14T00:00:00.000Z",
      "type": "DISCOUNT",
      "value": 10,
    }
  }
  marketingAttributes={
    Object {
      "specialBadgeCode": "PREZZO_STOCK",
      "specialBadgeCodePeriodEndDate": "2020-10-14T00:00:00.000Z",
    }
  }
  promotionCode="0"
  topLeftStyle={Object {}}
  topRightStyle={Object {}}
  wrapperStyle={Object {}}
>
  <glamorous(div)
    wrapperStyle={Object {}}
  >
    <div
      className="css-nil"
    >
      <glamorous(div)
        topLeftStyle={Object {}}
      >
        <div
          className="css-nil"
        >
          <MarketingBadge
            promotion={
              Object {
                "code": null,
              }
            }
          />
        </div>
      </glamorous(div)>
      <glamorous(div)
        topLeft={
          Object {
            "code": null,
          }
        }
        topRightStyle={Object {}}
      >
        <div
          className="css-nil"
        >
          <MarketingBadge
            promotion={
              Object {
                "code": "IDEAPIU",
                "value": 10,
              }
            }
          >
            <Component
              src="test-file-stub"
              value={10}
            >
              <glamorous(div)>
                <div
                  className="css-1xayo1t"
                >
                  <glamorous(img)
                    height="50px"
                    mBottom="18px"
                    src="test-file-stub"
                    width="100px"
                  >
                    <img
                      className="css-1mc4zot"
                      src="test-file-stub"
                    />
                  </glamorous(img)>
                  <glamorous(p)>
                    <p
                      className="css-178lsms"
                    >
                      -10% IDEAPIÚ
                    </p>
                  </glamorous(p)>
                </div>
              </glamorous(div)>
            </Component>
          </MarketingBadge>
        </div>
      </glamorous(div)>
    </div>
  </glamorous(div)>
</MarketingFlag>
`;
